Update the files